[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Idle/Idle0.tres" type="Texture" id=1]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Idle/Idle4.tres" type="Texture" id=2]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Idle/Idle5.tres" type="Texture" id=3]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Idle/Idle2.tres" type="Texture" id=4]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Idle/Idle1.tres" type="Texture" id=5]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Idle/Idle3.tres" type="Texture" id=6]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Attack/Attack0.tres" type="Texture" id=7]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Attack/Attack1.tres" type="Texture" id=8]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/SuperAttack/super2.tres" type="Texture" id=9]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/SuperAttack/super7.tres" type="Texture" id=10]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/SuperAttack/super5.tres" type="Texture" id=11]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/SuperAttack/super4.tres" type="Texture" id=12]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/SuperAttack/super0.tres" type="Texture" id=13]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/SuperAttack/super1.tres" type="Texture" id=14]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/SuperAttack/super3.tres" type="Texture" id=15]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Godizila2.gd" type="Script" id=16]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/SuperAttack/super8.tres" type="Texture" id=17]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/SuperAttack/super6.tres" type="Texture" id=18]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Death/Death1.tres" type="Texture" id=19]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Death/Death0.tres" type="Texture" id=20]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Death/Death3.tres" type="Texture" id=21]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Death/Death5.tres" type="Texture" id=22]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Death/Death2.tres" type="Texture" id=23]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Anim/Death/Death4.tres" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 22 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 17 ) ],
"loop": true,
"name": "SuperAttack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 12.0675 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 131.488, 91.5975 )

[node name="Godzilla" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
frame = 3
playing = true
flip_h = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.65457, -3.5166 )
shape = SubResource( 2 )

[node name="Area2DLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DLeft"]
position = Vector2( -150, -60 )
shape = SubResource( 3 )

[node name="Area2DRight" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2DRight"]
position = Vector2( 160, -60 )
shape = SubResource( 3 )

[node name="Right1" type="Position2D" parent="."]
position = Vector2( 8.801, -28.624 )

[node name="Left1" type="Position2D" parent="."]
position = Vector2( -7.832, -28.624 )

[node name="Left2" type="Position2D" parent="."]
position = Vector2( -16.36, -25.953 )

[node name="Left3" type="Position2D" parent="."]
position = Vector2( 5.841, -25.437 )

[node name="Right2" type="Position2D" parent="."]
position = Vector2( -4.883, -26.329 )

[node name="Right3" type="Position2D" parent="."]
position = Vector2( -0.549, -20.219 )

[node name="Left" type="Position2D" parent="."]
position = Vector2( -15.939, -9.362 )

[node name="Right" type="Position2D" parent="."]
position = Vector2( 15, -9.362 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2DLeft" to="." method="_on_Area2DLeft_body_entered"]
[connection signal="body_exited" from="Area2DLeft" to="." method="_on_Area2DLeft_body_exited"]
[connection signal="body_entered" from="Area2DRight" to="." method="_on_Area2DRight_body_entered"]
[connection signal="body_exited" from="Area2DRight" to="." method="_on_Area2DRight_body_exited"]
